# SteamVR-Simple-Lunch

./: Cargo.toml  README.md  build.rs
.sisyphus/: boulder.json
.sisyphus/plans/: steamvr-launcher.md
src/: app.rs  main.rs  shortcut_manager.rs  steam_language.rs  steam_path.rs
