[package]
name = "steamvr-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
winreg = "0.52"
dirs = "5"
lnks = "0.2.0"
rfd = "0.15"
image = "0.25"

[build-dependencies]
winres = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
